# Real-Time-Order-Book-Market-Visualization

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  myStyles.qss
backend/: market_data.cpp  market_data.h  matching_engine.cpp  matching_engine.h  orderbook.cpp  orderbook.h
frontend/: chart_widget.cpp  chart_widget.h  dashboard.ui  mainwindow.cpp  mainwindow.h
